--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "devDependencies": {
         "axios": "^0.18",
         "bootstrap": "^4.1.0",
+        "browser-sync": "^2.26.7",
         "cross-env": "^5.1",
+        "gulp": "^4.0.2",
         "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.5",
@@ -20,6 +22,7 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
-        "vue": "^2.6.10"
+        "vue": "^2.6.10",
+        "vue-template-compiler": "^2.6.10"
     }
 }
