All about OOP javaScript part 1

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,18 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
-    "/js/app.1164f44df8a2e009769f.hot-update.js": "/js/app.1164f44df8a2e009769f.hot-update.js"
+    "/js/app.5292547887b59ec110e2.hot-update.js": "/js/app.5292547887b59ec110e2.hot-update.js",
+    "/js/app.b697398f48533f4149bb.hot-update.js": "/js/app.b697398f48533f4149bb.hot-update.js",
+    "/js/app.31c9fc1926442adce6d7.hot-update.js": "/js/app.31c9fc1926442adce6d7.hot-update.js",
+    "/js/app.4661f8663f5e623b7b8c.hot-update.js": "/js/app.4661f8663f5e623b7b8c.hot-update.js",
+    "/js/app.ea4f6fecc5a281f8e486.hot-update.js": "/js/app.ea4f6fecc5a281f8e486.hot-update.js",
+    "/js/app.9be3fc846cb38e41d718.hot-update.js": "/js/app.9be3fc846cb38e41d718.hot-update.js",
+    "/js/app.5ae18c5ae7e4345d046d.hot-update.js": "/js/app.5ae18c5ae7e4345d046d.hot-update.js",
+    "/js/app.39709bb67dbb40013946.hot-update.js": "/js/app.39709bb67dbb40013946.hot-update.js",
+    "/js/app.6c3be6a8ef022eeabf43.hot-update.js": "/js/app.6c3be6a8ef022eeabf43.hot-update.js",
+    "/js/app.92a5ac7a8f27a2aa4d82.hot-update.js": "/js/app.92a5ac7a8f27a2aa4d82.hot-update.js",
+    "/js/app.24fef37a295c1f942f59.hot-update.js": "/js/app.24fef37a295c1f942f59.hot-update.js",
+    "/js/app.40bbc9b44a526c2dd241.hot-update.js": "/js/app.40bbc9b44a526c2dd241.hot-update.js",
+    "/js/app.a2f1864406e1381b8cc8.hot-update.js": "/js/app.a2f1864406e1381b8cc8.hot-update.js",
+    "/js/app.0b5024b69dcf2038009a.hot-update.js": "/js/app.0b5024b69dcf2038009a.hot-update.js"
 }
